2008-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalFreeBusy.m ([iCalFreeBusy
	-fillStartDate:startDateandEndDate:endDate]): new method created
	to avoid enlarging the code.

2008-04-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalRecurrenceCalculator.m ([iCalRecurrenceCalculator
	+recurrenceRangesWithinCalendarDateRange:_rfirstInstanceCalendarDateRange:_firrecurrenceRules:_rRulesexceptionRules:_exRulesexceptionDates:_exDates]):
	when removing dates, the decremental count of dates to remove was
	actually incremental, which caused an out of bound reference
	exception.

2008-03-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalRecurrenceRule.m ([iCalRecurrenceRule -byMonthDay]): check
	whether the "bymonthday" value is empty and returns an array only if
	not, otherwise returns nil.

	* iCalRecurrenceCalculator.m ([iCalRecurrenceCalculator
	+recurrenceRangesWithinCalendarDateRange:_rfirstInstanceCalendarDateRange:_firrecurrenceRules:_rRulesexceptionRules:_exRulesexceptionDates:_exDates]):
	split method in many submethods for clarity.

2008-03-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalTimeZonePeriod.m ([iCalTimeZonePeriod
	-dayOfWeekFromRruleDay:day]): the algorithm would never work if
	the day was monday. After it was changed for sunday (see below),
	it would return 1 instead of 0.

	* iCalRecurrenceRule.m ([iCalRecurrenceRule -setByDayMask:_mask]):
	the first day of the week is always sunday, following Apple's
	documentation.

2008-03-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* NGVCardReference.[hm]: new class module that implements the base
	data type contained in a VLIST element.

	* NGVList.[hm]: new class module that implements Thunderbird-style
	personal mailing lists. Base mime-type is "text/x-vlist".

2008-02-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalRecurrenceRule.m ([iCalRecurrenceRule -wkst]): if no wkst
	parameter is specified, we supply "MO" as default value.